new/components/network-policy/patches/sourcegraph.Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  # This will be updated to the namespace set in your overlay automatically
  name: ns-sourcegraph
  labels:
    deploy: sourcegraph
    name: sourcegraph-prod
